fixed how things stack on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,7 +7,7 @@ main {
 }
 
 .project {
-    padding-top: 25px;
+    padding-top: 40px;
     padding-bottom: 25px;
 }
 nav {
@@ -27,7 +27,8 @@ nav {
 }
 
 .contact {
-    @extend .section
+    @extend .section;
+    padding-top: 25px;
 }
 
 .sectionTitle {
